# nuclear-box

./: Pipfile  README.md  nuclear-box.cabal  nuclear_box.py  parse_atomic_mass_data.py
data/: atomic_mass_data.csv  atomic_mass_data.txt
src/: NuclearBox.hs
