cabal-version:       >=1.10

name:                nuclear-box
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lúcás Críostóir Meier
maintainer:          cronokirby@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable nuclear-box
  main-is:             Main.hs
  other-modules:       NuclearBox
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010
